--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.2",
+    "konva": "^7.1.3",
     "material-table": "^1.69.1",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
