--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "antd": "^4.7.2",
     "bootstrap": "^4.5.2",
     "konva": "^7.1.3",
     "material-table": "^1.69.1",
