--- a/package.json
+++ b/package.json
@@ -15,14 +15,24 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "antd": "^4.7.2",
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "formidable": "^1.2.2",
     "konva": "^7.1.3",
     "material-table": "^1.69.1",
     "mdbreact": "^4.27.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-expandable-table": "0.0.6",
+    "react-hook-form": "^6.11.0",
     "react-konva": "^16.13.0-6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -32,7 +42,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
