--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.5.2",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
+    "downloadjs": "^1.4.7",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "formidable": "^1.2.2",
