--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.12.64",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
@@ -25,6 +26,7 @@
     "express-fileupload": "^1.2.0",
     "formidable": "^1.2.2",
     "konva": "^7.1.3",
+    "lodash": "^4.17.20",
     "material-table": "^1.69.1",
     "mdbreact": "^4.27.0",
     "morgan": "^1.10.0",
