--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-konva": "^16.13.0-6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
     "typescript": "^3.7.5"
   },
   "scripts": {
